--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   --gray-950: hsl(0, 0%, 7%);
 
   --font-body: 'Figtree', sans-serif;
-  --font-size-title: 22px;
+  --font-size-title: clamp(20px, 6vw, 24px);
   --font-size-body: 16px;
   --font-size-span: 14px;
 }
@@ -38,7 +38,7 @@ main {
   flex-direction: column;
   gap: 1rem;
   padding: 1.2rem;
-  margin: 0 1rem;
+  margin: 0 20px;
   max-width: 360px;
   border-radius: 20px;
   border: 1px solid var(--gray-950);
